Tue Oct  9 16:58:10 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* array.c: remove to_a completely.

	* array.c (tmpbuf): keep DRY to clear klass of temporary objects.

Tue Oct  9 16:33:32 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_permutation, rb_ary_combination, rb_ary_product):
	  hide internal buffer objects.  [ruby-dev:31982]

Tue Oct  9 16:00:32 2007  NAKAMURA Usaku  <usa@ruby-lang.org>

	* parse.y (parser_read_escape, parser_tokadd_escape): check code range.
	  [ruby-dev:31980]

Tue Oct  9 15:40:24 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (STR_NEW3): check for if single byte sequence.

Mon Oct  8 20:06:29 2007  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* lib/net/imap.rb, lib/net/smtp.rb, lib/net/pop.rb: hostname should
	  be verified against server's indentity as persented in the server's
	  certificate. [ruby-dev:31960]

	* ext/openssl/lib/net/telnets.rb, ext/openssl/lib/net/ftptls.rb: ditto.

Sun Oct  7 22:37:47 2007  Kouhei Sutou  <kou@cozmixng.org>

	* test/rss/test_taxonomy.rb, test/rss/test_parser_1.0.rb,
	  test/rss/test_image.rb, test/rss/rss-testcase.rb: ensured
	  declaring XML namespaces.

Sun Oct  7 22:00:01 2007  Tanaka Akira  <akr@fsij.org>

	* include/ruby/node.h: make node flags as VALUE type.
	  enum ruby_node_flags removed.

	* ruby.c: define RUBY_NODE_* as const for gdb.

Sun Oct  7 18:57:12 2007  Tanaka Akira  <akr@fsij.org>

	* include/ruby/ruby.h: enum ruby_value_flags removed.  [ruby-dev:31959]

	* ruby.c: define RUBY_FL_* as const VALUE for gdb.

Sun Oct  7 17:50:14 2007  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* lib/net/http.rb: remove enable_post_connection_check flag.

	* lib/open-uri.rb: ditto.

Sun Oct 07 15:48:40 2007  Koichi Sasada  <ko1@atdot.net>

	* insns.def (opt_eq): fix to use rb_str_equal().

Sat Oct  6 23:14:54 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (rb_str_to_i): update RDoc since base can be any value
	  between 2 and 36.  [ruby-talk:272879]
